--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Launch the Jira issues search page quickly without waiting for Jira to load."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Binki Series Timer</title>
+    <title>Binki Jira Quick Search</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
